--- a/page7.html
+++ b/page7.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/m">bootstrap table</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader13 mbr-after-navbar" id="extHeader13-4s" data-rv-view="572" style="background-image: url(assets/images/141204142054-early-start-background-full-169-1600x900.jpg);">
+<section class="engine"><a href="https://mobirise.co/p">bootstrap navbar</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader13 mbr-after-navbar" id="extHeader13-4s" data-rv-view="572" style="background-image: url(assets/images/141204142054-early-start-background-full-169-1600x900.jpg);">
 
     
 
@@ -87,7 +87,7 @@
 We will contact you very soon regarding our Early Bird 1 offering via email</div>
                             </div>
                             <form action="https://mobirise.com/" method="post" data-form-title="GETModer ITO 2018Early Bird OfferingWhitelisting">
-                                <input type="hidden" value="MB0p5k4FNdYmP8++t583CZI4Ro2u7KSuVllpcam4RQe/ECnYscX0M1eT3ZSY0AylrkHKNwJ9Lq8FFWzTFaAll7Nb0oP6l/rHsinPVRk/QTUzotGML+KUpE0DRMptlJQa" data-form-email="true">
+                                <input type="hidden" value="WVBtl64gkkhhFT2kavE7ngMEt4x952jRh28UM1NMeTuHK03iVqB3ayaBhVwJEx/mipUWd0r6wYx7CXJkrCLfnGSeaAGjmi0fe0mAFJieT7zQ0blDyoWywS43AvIqnt8/" data-form-email="true">
 
                                     <div class="col-xs-12">
                                          <input type="text" class="form-control" name="name" required="" data-form-field="Name" placeholder="Name*">
