--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/q">bootstrap slider</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-51" data-rv-view="589" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
+<section class="engine"><a href="https://mobirise.co/l">free bootstrap theme</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-51" data-rv-view="589" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(41, 105, 176);">
     </div>
@@ -297,7 +297,7 @@
 
 </section>
 
-<section class="mbr-section extMsg-box4 tab-content" id="extMsg-box4-1n" data-rv-view="439" style="background-image: url(assets/images/contact-bg-1960x100015.jpg); padding-top: 100px; padding-bottom: 150px;">
+<section class="mbr-section extMsg-box4 tab-content" id="extMsg-box4-1n" data-rv-view="439" style="background-image: url(assets/images/contact-bg-1960x100016.jpg); padding-top: 100px; padding-bottom: 150px;">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(0, 0, 0);">
     </div>
