--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/k">bootstrap templates</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-51" data-rv-view="2" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
+<section class="engine"><a href="https://mobirise.co/m">bootstrap table</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-51" data-rv-view="2" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(41, 105, 176);">
     </div>
@@ -119,9 +119,7 @@
 <section class="mbr-section mbr-section-nopadding mbr-figure--caption-outside-bottom" id="image1-53" data-rv-view="70">
     <div class="mbr-figure">
         <div><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/6hGFy3cWtrY?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
-        <div class="mbr-figure-caption mbr-figure-caption-over">
-            <div class="container">Create awesome mobile-friendly websites. No coding and free.</div>
-        </div>
+        
     </div>
 </section>
 
@@ -306,7 +304,7 @@
 
 </section>
 
-<section class="mbr-section extMsg-box4 tab-content" id="extMsg-box4-1n" data-rv-view="27" style="background-image: url(assets/images/contact-bg-1960x10004.jpg); padding-top: 100px; padding-bottom: 150px;">
+<section class="mbr-section extMsg-box4 tab-content" id="extMsg-box4-1n" data-rv-view="27" style="background-image: url(assets/images/contact-bg-1960x10005.jpg); padding-top: 100px; padding-bottom: 150px;">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(0, 0, 0);">
     </div>
