--- a/page7.html
+++ b/page7.html
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-<section id="ext_menu-4q" data-rv-view="160">
+<section id="ext_menu-4q" data-rv-view="158">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/c">website maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader13 mbr-after-navbar" id="extHeader13-4s" data-rv-view="164" style="background-image: url(assets/images/141204142054-early-start-background-full-169-1600x900.jpg);">
+<section class="engine"><a href="https://mobirise.co/i">how to build your own website for free</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader13 mbr-after-navbar" id="extHeader13-4s" data-rv-view="162" style="background-image: url(assets/images/141204142054-early-start-background-full-169-1600x900.jpg);">
 
     
 
@@ -87,7 +87,7 @@
 We will contact you very soon regarding our Early Bird 1 offering via email</div>
                             </div>
                             <form action="https://mobirise.com/" method="post" data-form-title="GETModer ITO 2018Early Bird OfferingWhitelisting">
-                                <input type="hidden" value="30Blh7jQZ2ib7ceJn0g1NPtyWyBCwgQlyakLuHMAN5zoTJpNQSfWCtxTEz8Xy70erSp6jfsSx8diSO2KEJz+zO5XGqmxEgygeVE4zruTujVp9jqi6nmgWzt/HMwSlE/J" data-form-email="true">
+                                <input type="hidden" value="y2+5KrGvk2iuXP1mbqowohDRZ1AEwAlngFmI6Dq5A4fOmyOK+85Wq83+rkrRODV/svtAi5guMyXebAy0hu8xdU4/GSDBCyoYPBuHHSqmgL3S/l246Yz9wZUfOKwtmD+5" data-form-email="true">
 
                                     <div class="col-xs-12">
                                          <input type="text" class="form-control" name="name" required="" data-form-field="Name" placeholder="Name*">
@@ -115,7 +115,7 @@ We will contact you very soon regarding our Early Bird 1 offering via email</div
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-4r" data-rv-view="162" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-4r" data-rv-view="160" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>&nbsp;&nbsp;<a href="page4.html">Terms and Conditions</a>&nbsp; &nbsp;<a href="page5.html">Privacy Policy</a>&nbsp; &nbsp;<a href="index.html#extToggle1-24">FAQ</a>&nbsp;&nbsp;<a href="page3.html">Contact</a>&nbsp;<br>GETModer. Level 11, 157 Lambton Quay<br>Wellington 6011<br>New Zealand<br>Email: <a href="mailto:admin@getmoder.io">admin@getmoder.io</a><br>Copyright (c) 2018 GETModer Foundation. All rights reserved</p>
